GUI yenileme: custom head (texture) hazirligi, small-caps etiketler, sort 51. slota tasindi, favoriler menuden kaldirildi, admin/history/favorites GUI'leri